--- a/index.html
+++ b/index.html
@@ -101,9 +101,11 @@ loadJSON('questions.json',
 
 var change_question = function(myinput) {
   // save old buffer
+  var output = document.getElementById('output');
   if (initialized) {
     questions.questions[current_question].mycode = editor.getValue();
-    questions.questions[current_question].result = document.getElementById('output').value;
+    questions.questions[current_question].result = output.value;
+    auto_resize(output)
   }
   initialized=1
     current_question += myinput; 
@@ -128,7 +130,9 @@ var change_question = function(myinput) {
   contentSolution.innerHTML = solution;
   auto_resize(contentSolution)
   editor.setValue(mycode);
-  document.getElementById('output').value = questions.questions[current_question].result;
+  output.value = questions.questions[current_question].result;
+  auto_resize(output)
+  auto_resize(contentSolution)
   selected_question = current_question;
 
   //var str = window.location.search
@@ -196,16 +200,17 @@ var runNix = function() {
     </script>
 </head>
 <body>
-  <div id="masterdiv">
-    <progress value="0" max="100" id="progress" hidden=1>progress</progress>
+    
     <div id="spinner" class="spinner-flex-container-row">
       <div class="spinner-flex-container-col">
         <div id="spinner-icon"><img src="nix.gif"></div>
         <div id="status">Downloading...</div>
+         <progress value="0" max="100" id="progress" hidden=1>progress</progress>
       </div>
     </div>
-
+    <div id="header">
     <h1>A tour of Nix</h1>
+    </div>
     <div id="bar">
       <div vertical-slide="" id="resize" left="#left-side" right="#right-side" class="ui-draggable"></div>
       <div id="left">
@@ -226,18 +231,23 @@ var runNix = function() {
           <textarea id="solution" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
         </div>
         <div class="zz">
+          <textarea id="autocheck" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
+        </div>
+        <div class="zz">
           <div id="runInfo"></div>
         </div>
       </div>
       <div id="right">
-        <div id="kdvjf">
+        <div id="question_navigation">
           <button type="button" class="mybutton" id="prevButton" title="use ctrl+k" onClick="change_question(-1)" >prev</button>
           <button type="button" class="mybutton" id="nextButton" title="use ctrl+j" onClick="change_question(1)" >next</button>
         </div>
         <h1><div id="contentNumber">A tour of NixLang</div></h1>
         <div id="contentQuestion">demo text contentQuestion area</div>
+      <div id="footer">
+        bar
       </div>
-    </div>
+      </div>
     <script type="text/javascript">
 var input = document.getElementById('input');
 var editor = CodeMirror.fromTextArea(input, {
