--- a/index.html
+++ b/index.html
@@ -100,40 +100,40 @@ loadJSON('questions.json',
     );
 
 var change_question = function(myinput) {
-  // save old buffer
+  // save old state
   var output = document.getElementById('output');
   if (initialized) {
     questions.questions[current_question].mycode = editor.getValue();
     questions.questions[current_question].result = output.value;
     auto_resize(output)
   }
-  initialized=1
-    current_question += myinput; 
+  initialized=1;
+  current_question += myinput; 
 
   if (current_question < 0)
     current_question = 0;
   if (current_question >= questions.questions.length-1)
     current_question = questions.questions.length-1;
 
-  var contentTitle = document.getElementById('contentTitle')
-    var contentQuestion = document.getElementById('contentQuestion')
-    var contentSolution = document.getElementById('solution')
+  var contentTitle = document.getElementById('contentTitle');
+  var contentText = document.getElementById('contentText');
+  var contentSolution = document.getElementById('solution');
 
-    var topic = questions.questions[current_question].topic
-    var question = questions.questions[current_question].question
-    var mycode = questions.questions[current_question].mycode
-    var solution = questions.questions[current_question].solution
-    document.getElementById('solution').style.visibility="hidden";
+  var topic = questions.questions[current_question].topic;
+  var question = questions.questions[current_question].question;
+  var mycode = questions.questions[current_question].mycode;
+  var solution = questions.questions[current_question].solution;
+  document.getElementById('solution').style.visibility="hidden";
 
   contentTitle.innerHTML = String(current_question + 1 + " - " + topic);
-  contentQuestion.innerHTML = markdown.toHTML(question);
+  contentText.innerHTML = markdown.toHTML(question);
   contentSolution.innerHTML = solution;
-  auto_resize(contentSolution)
-    editor.setValue(mycode);
+  auto_resize(contentSolution);
+  editor.setValue(mycode);
   output.value = questions.questions[current_question].result;
-  auto_resize(output)
-    auto_resize(contentSolution)
-    selected_question = current_question;
+  auto_resize(output);
+  auto_resize(contentSolution);
+  selected_question = current_question;
 
   //var str = window.location.search
   //replaceQueryParam('id', current_question+1, str)
@@ -152,7 +152,7 @@ var reset_question = function() {
 }
 var markdown2html = function() {
   var text = editor.getValue();
-  contentQuestion.innerHTML = markdown.toHTML(text);
+  contentText.innerHTML = markdown.toHTML(text);
   return text.split('\n').join('\\n').replace("\"", "\\\"")
     ///replace(/(?:\r\n|\r|\n)/g,'\n') 
 }
@@ -211,14 +211,14 @@ var runNix = function() {
     <div id="header">
       <h1>A tour of Nix</h1>
     </div>
-    <div id="middle">
-      <div id="left">
-        <div id="adsfas">
+    <div id="middle" class="flex-container-row">
+      <div id="left" class="flex-container-col">
+        <div id="adsfas" class="flex-container-col">
           <textarea class="input" id="input" rows="8">demo text textarea</textarea>
-          <div id="editorButtonGroup">
-            <button type="button" class="mybutton" id="resetButton" onClick="reset_question()" title="">reset</button>
-            <button type="button" class="mybutton" id="solutionButton" onClick="showSolution()" title="">solution</button>
-            <button type="button" class="mybutton" id="runButton" onClick="runNix()" title="use shift+return">run</button>
+          <div id="editorButtonGroup"  class="flex-container-row">
+            <button type="button" class="myButton" id="resetButton" onClick="reset_question()" title="">reset</button>
+            <button type="button" class="myButton" id="solutionButton" onClick="showSolution()" title="">solution</button>
+            <button type="button" class="myButton" id="runButton" onClick="runNix()" title="use shift+return">run</button>
           </div>
         </div>
         <textarea id="output" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
@@ -226,17 +226,17 @@ var runNix = function() {
         <textarea id="autocheck" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
         <div id="runInfo"></div>
       </div>
-      <div id="right">
-        <div id="question_navigation">
-          <button type="button" class="mybutton" id="prevButton" title="use ctrl+k" onClick="change_question(-1)" >prev</button>
-          <button type="button" class="mybutton" id="nextButton" title="use ctrl+j" onClick="change_question(1)" >next</button>
+      <div id="right" class="flex-container-col">
+        <div id="question_navigation" class="flex-container-row">
+          <button type="button" class="myButton" id="prevButton" title="use ctrl+k" onClick="change_question(-1)" >prev</button>
+          <button type="button" class="myButton" id="nextButton" title="use ctrl+j" onClick="change_question(1)" >next</button>
         </div>
         <h1><div id="contentTitle">A tour of Nix</div></h1>
-        <div id="contentQuestion">If you can see this, questions.json wasn't loaded properly!</div>
+        <div id="contentText">If you can see this, questions.json wasn't loaded properly!</div>
       </div>
-      <div id="footer">
-        bar
-      </div>
+    </div>
+    <div id="footer">
+      this text is inside the footer...
     </div>
   </div>
   <script type="text/javascript">
