fixed the nav buttons

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta name="http-equiv" content="Content-type: text/html; charset=UTF-8"/>
   <!--
-  -->
   <script type="text/javascript" src="nix-instantiate.js"></script>
+  -->
   <script type="text/javascript" src="markdown.min.js"></script>
   <title>A tour of Nix</title>
 
@@ -200,13 +200,13 @@ var runNix = function() {
   </script>
 </head>
 <body>
-  <div id="spinner" class="spinner-flex-container-row">
+<!--  <div id="spinner" class="spinner-flex-container-row">
     <div class="spinner-flex-container-col">
       <div id="spinner-icon"><img src="nix.gif"></div>
       <div id="status">Downloading...</div>
       <progress value="0" max="100" id="progress" hidden=1>progress</progress>
     </div>
-  </div>
+  </div>-->
   <div class="flex-container-col">
     <div id="header">
       <h1>A tour of Nix</h1>
@@ -227,7 +227,7 @@ var runNix = function() {
         <div id="runInfo"></div>
       </div>
       <div id="right" class="flex-container-col">
-        <div id="question_navigation" class="flex-container-row">
+        <div id="questionNavigation" class="flex-container-row">
           <button type="button" class="myButton" id="prevButton" title="use ctrl+k" onClick="change_question(-1)" >prev</button>
           <button type="button" class="myButton" id="nextButton" title="use ctrl+j" onClick="change_question(1)" >next</button>
         </div>
