responsive: basic support for mobile devices

--- a/index.html
+++ b/index.html
@@ -235,9 +235,7 @@ var runNix = function() {
         <div id="contentText">If you can see this, questions.json wasn't loaded properly!</div>
       </div>
     </div>
-    <div id="footer">
-      this text is inside the footer...
-    </div>
+    <div id="footer"> </div>
   </div>
   <script type="text/javascript">
 var input = document.getElementById('input');
