working version with mobile support

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en" dir="ltr" >
 <head>
   <meta name="http-equiv" content="Content-type: text/html; charset=UTF-8"/>
   <!--
-  <script type="text/javascript" src="nix-instantiate.js"></script>
   -->
+  <script type="text/javascript" src="nix-instantiate.js"></script>
   <script type="text/javascript" src="markdown.min.js"></script>
   <title>A tour of Nix</title>
 
@@ -200,13 +201,13 @@ var runNix = function() {
   </script>
 </head>
 <body>
-<!--  <div id="spinner" class="spinner-flex-container-row">
+  <div id="spinner" class="spinner-flex-container-row">
     <div class="spinner-flex-container-col">
       <div id="spinner-icon"><img src="nix.gif"></div>
       <div id="status">Downloading...</div>
       <progress value="0" max="100" id="progress" hidden=1>progress</progress>
     </div>
-  </div>-->
+  </div>
   <div class="flex-container-col">
     <div id="header">
       <h1>A tour of Nix</h1>
